# libspot-rs

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  debug_grimshaw.rs  debug_z_tracking.rs
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  pr.yml  test-consistency.yaml  test-libspot-rs.yaml  test-libspot.yaml  test.yaml
crates/libspot/: Cargo.toml  README.md  build.rs
crates/libspot-ffi/: Cargo.toml  README.md  build.rs
crates/libspot-ffi/examples/: basic.rs  debug.rs  debug_comparison.rs  debug_cross_validate.rs  debug_detailed.rs  debug_divergence.rs  debug_ffi.rs  debug_ffi_gpd.rs  debug_grimshaw_steps.rs  debug_inputs.rs  debug_short.rs  debug_single_step.rs  debug_targeted.rs  simple.rs  zoom_ffi.rs
crates/libspot-ffi/libspot/src/: estimator.c
crates/libspot-ffi/src/: detector.rs  ffi.rs  lib.rs  status.rs
crates/libspot-ffi/tests/: basic_example.rs  integration.rs  pure_rust_comparison.rs
crates/libspot-rs/: Cargo.toml  README.md
crates/libspot-rs/examples/: basic.rs  serialization.rs
crates/libspot-rs/src/: config.rs  error.rs  estimator.rs  lib.rs  p2.rs  peaks.rs  ser.rs  spot.rs  status.rs  tail.rs  ubend.rs
crates/libspot-rs/tests/: pure_rust_basic_example.rs  pure_rust_validation.rs  serialization.proptest-regressions  serialization.rs
crates/libspot/examples/: basic.c  basic.rs  basic_pure_rust.rs  compare_ffi.rs  debug.rs  debug_comparison.rs  debug_cross_validate.rs  debug_detailed.rs  debug_divergence.rs  debug_gpd.rs  debug_gpd_params.rs  debug_grimshaw_steps.rs  debug_inputs.rs  debug_intervals.rs  debug_p2_values.rs  debug_rust.rs  debug_short.rs  debug_single_step.rs  debug_spot.rs  debug_targeted.rs  minimal_test.rs  test_c_double.rs  test_complete_c_double.rs  test_grimshaw.rs  track_gpd_evolution.rs  zoom_rust.rs
crates/libspot/src/: config.rs  detector.rs  error.rs  estimator.rs  ffi.rs  lib.rs  math.rs  p2.rs  peaks.rs  spot.rs  tail.rs  ubend.rs
crates/libspot/tests/: basic_example.rs  integration.rs  pure_rust_basic_example.rs  pure_rust_validation.rs
crates/spot-rs/: Cargo.toml  README.md
crates/spot-rs/examples/: pure_rust_demo.rs
crates/spot-rs/src/: error.rs  math.rs  p2.rs  tail.rs  ubend.rs
docs/img/: LOGO_ATTRIBUTION.md
examples/: api_compatibility_test.rs  basic.rs  compare_implementations.rs  pure_rust_demo.rs  simple.rs  unified_api_demo.rs
experiment/: Cargo.toml  INVESTIGATION_SUMMARY.md  README.md  build.rs  c_grimshaw.rs  capture_critical_data.rs  compare_parameters.rs  comparison_report.txt  comprehensive_comparison.rs  counting_debug.txt  critical_input.txt  critical_peaks_data.csv  debug_counting.rs  debug_intermediate_values.rs  debug_log_comparison.rs  find_z_divergence.rs  isolate_first_excess.rs  isolate_spot_components.rs  lib.rs  rust_grimshaw.rs  shared_random.rs  test_quantile_precision.rs  z_divergence_tracking.txt
src/: allocator.rs  config.rs  detector.rs  error.rs  ffi.rs  ffi_native.rs  ffi_wasm.rs  lib.rs  main.rs  peaks.rs  status.rs
tests/: basic_example.rs  integration.rs  pure_rust_basic_example.rs  pure_rust_comparison.rs  pure_rust_validation.rs
