[package]
name = "libspot-rs"
version = "0.2.0"
edition = "2021"
authors = ["Mathew Shen <datahonor@gmail.com>"]
documentation = "https://docs.rs/libspot-rs"
repository = "https://github.com/shenxiangzhuang/libspot-rs"
readme = "README.md"
license = "LGPL-3.0"
description = "Pure Rust implementation of the SPOT algorithm for time series anomaly detection"
keywords = ["Spot", "TimeSeries", "AnomalyDetection"]

# Include style for pure Rust implementation
include = [
    "src/**/*",
    "examples/**/*",
    "tests/**/*",
    "./README.md",
    "./LICENSE",
]

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
approx = "0.5.1"
libc = "0.2"
proptest = "1.5"
serde_json = "1.0"
