[package]
name = "libspot"
version = "2.0.0-beta.5.0"
edition = "2021"
authors = ["Mathew Shen <datahonor@gmail.com>"]
documentation = "https://docs.rs/crate/libspot-ffi"
repository = "https://github.com/shenxiangzhuang/libspot-rs"
readme = "README.md"
license = "LGPL-3.0"
description = "Rust FFI bindings for libspot, a fast time series anomaly detector"
keywords = ["Spot", "TimeSeries", "AnomalyDetection", "FFI"]

# Include style (current) - Note: may include extra files due to git submodule behavior
include = [
    "src/**/*",
    "build.rs",
    "libspot/Makefile",
    "libspot/LICENSE.md",
    "libspot/README.md",
    "libspot/src/**/*.c",
    "libspot/include/**/*.h",
    "libspot/dist/**/*",
    "./README.md",
]

[dependencies]
libc = "0.2"

[dev-dependencies]
approx = "0.5.1"
