[package]
name = "spot-rs"
version = "0.1.0"
edition = "2021"
authors = ["Mathew Shen <datahonor@gmail.com>"]
description = "Pure Rust implementation of the SPOT algorithm for time series anomaly detection"
license = "LGPL-3.0"
repository = "https://github.com/shenxiangzhuang/libspot-rs"

[dependencies]

[dev-dependencies]
approx = "0.5.1"